# Evaluation-of-RL-framework-in-a-credit-scoring-problem

./: .gitignore  keynote_promt.md
rl-credit-scoring-sim/: README.md  dimensionality_experiment_report.md  pyproject.toml  requirements.txt  state_dimension_manifest.md
rl-credit-scoring-sim/artifacts/checkpoints/: double_dqn_seed_113_episode_12.pt  double_dqn_seed_113_episode_16.pt  double_dqn_seed_113_episode_20.pt  double_dqn_seed_113_episode_24.pt  double_dqn_seed_113_episode_28.pt  double_dqn_seed_113_episode_32.pt  double_dqn_seed_113_episode_36.pt  double_dqn_seed_113_episode_4.pt  double_dqn_seed_113_episode_40.pt  double_dqn_seed_113_episode_44.pt  double_dqn_seed_113_episode_48.pt  double_dqn_seed_113_episode_8.pt  double_dqn_seed_113_final  double_dqn_seed_11_episode_12.pt  double_dqn_seed_11_episode_16.pt  double_dqn_seed_11_episode_20.pt  double_dqn_seed_11_episode_24.pt  double_dqn_seed_11_episode_28.pt  double_dqn_seed_11_episode_32.pt  double_dqn_seed_11_episode_36.pt  double_dqn_seed_11_episode_4.pt  double_dqn_seed_11_episode_40.pt  double_dqn_seed_11_episode_44.pt  double_dqn_seed_11_episode_48.pt  double_dqn_seed_11_episode_8.pt  (+183 more)
rl-credit-scoring-sim/configs/: run_profile.yaml  scenarios.yaml
rl-credit-scoring-sim/notes/: reference_study.md  writer_handoff.md
rl-credit-scoring-sim/outputs/: best_rl_by_dimension.csv  dimension_comparison_summary.csv  overall_best_by_dimension.csv  scenario_winner_counts.csv  statistical_hypothesis_tests.csv
rl-credit-scoring-sim/scripts/: run_dimensionality_experiment.py  run_hypothesis_tests.py  run_pipeline.py
(+153 files in other folders)
